# switchboard

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: app_config.rs  engine.rs  health.rs  lib.rs  log_stream.rs  process_manager.rs
ffi/: Cargo.toml  cbindgen.toml
ffi/src/: lib.rs
icons/: icon.icns
linux/: Cargo.toml  com.skolln.switchboard.desktop  install.sh
linux/src/: add_dialog.rs  main.rs
macos/: Package.swift
macos/Sources/CSwitchboardFFI/: module.modulemap  switchboard_ffi.h
macos/Sources/Switchboard/: AppState.swift  SwitchboardApp.swift
macos/Sources/Switchboard/Engine/: DevtoolEngine.swift
macos/Sources/Switchboard/Models/: AppDraftPayload.swift  AppEntry.swift  AppKind.swift
macos/Sources/Switchboard/Views/: AboutView.swift  AddAppSheet.swift  AppRowView.swift  ContentView.swift  KindBadge.swift  LogPanelView.swift  MenuBarContentView.swift  StatusDot.swift
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
windows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Switchboard.csproj  app.manifest  installer.iss
windows/Engine/: DevtoolEngine.cs
windows/Models/: AppDraftPayload.cs  AppEntry.cs  AppKind.cs
