[package]
name = "switchboard-core"
version = "0.1.0"
edition = "2024"
description = "Logique partagee de Switchboard (config, process, logs) — sans UI"

[dependencies]
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"
