[package]
name = "switchboard-ffi"
version = "0.1.0"
edition = "2024"
description = "Shim C ABI (JSON) du moteur Switchboard, pour les frontends natifs macOS/Windows"

[lib]
name = "switchboard_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
switchboard-core = { path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.4", features = ["v4"] }
