[package]
name = "switchboard-linux"
version = "0.1.0"
edition = "2024"
description = "Frontend natif Linux (GTK4 + libadwaita) de Switchboard"

[[bin]]
name = "switchboard"
path = "src/main.rs"

[dependencies]
switchboard-core = { path = "../core" }
gtk = { package = "gtk4", version = "0.11", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_4"] }
glib = "0.22"
uuid = { version = "1.23.4", features = ["v4"] }
